# auth-core-flask

./: .gitignore  README.md  hello.py  pyproject.toml  setup.py
flycatch_auth/: README.md  __init__.py  auth.py  fastapi_auth.py  flask_auth.py  flask_middleware.py  identity.py  jwt_auth.py  middleware.py  model_types.py  pyproject.toml
flycatch_auth/routes/: __init__.py  jwt_routes.py
flycatch_auth/services/: __init__.py  base.py  fastapi_auth.py  jwt_services.py  session_service.py
flycatch_auth/tests/: test_fastapi_integration.py
routes/: jwt_routes.py
tests/: test_auth.py  test_flask_integration.py
